--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,6 @@ Imports:
 URL: https://github.com/ropenscilabs/icepalace
 BugReports: https://github.com/ropenscilabs/icepalace/issues
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Config/testthat/edition: 3
