--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,9 @@ Version: 0.0.0.9004
 Authors@R: c(
     person("Maëlle", "Salmon", , "msmaellesalmon@gmail.com", role = c("cre", "aut"),
            comment = c(ORCID = "0000-0002-2815-0399")),
-    person("Jeroen", "Ooms", , "jeroen@berkeley.edu", role = "aut")
+    person("Jeroen", "Ooms", , "jeroen@berkeley.edu", role = "aut"),
+    person("rOpenSci", role = "fnd",
+           comment = c(ROR = "019jywm96"))
   )
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
